comments added, tests added, Controller refactored
